--- a/angular.json
+++ b/angular.json
@@ -99,18 +99,19 @@
             "styles": ["projects/squads/src/styles.scss"],
             "scripts": []
           }
-        },
-        "storybook": {
-          "builder": "@storybook/angular:start-storybook",
+        }
+      }
+    },
+    "storybook": {
+      "projectType": "application",
+      "root": "stories",
+      "sourceRoot": "stories",
+      "architect": {
+        "build": {
           "options": {
-            "browserTarget": "angular-cli:build",
-            "port": 4400
-          }
-        },
-        "build-storybook": {
-          "builder": "@storybook/angular:build-storybook",
-          "options": {
-            "browserTarget": "angular-cli:build"
+            "tsConfig": ".storybook/tsconfig.json",
+            "styles": ["projects/squads/src/styles.scss"],
+            "scripts": []
           }
         }
       }
